applications/api-cve/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-cve
  namespace: api-cve
spec:
  replicas: 0
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: api-cve
  template:
    metadata:
      labels:
        app: api-cve
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: api-cve
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/cve-sa-backend/api-cve:7165e604ffc7f1ec0e1eec9915f36bbd9a25dd04
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 2000m
            memory: 2000Mi
          limits:
            cpu: 2000m
            memory: 2000Mi
